--- a/scss/utility/_hero-image-background.scss
+++ b/scss/utility/_hero-image-background.scss
@@ -1,3 +1,4 @@
+// sets up a background-image to completely fill the element
 @mixin hero-image-background ($image, $fallback-colour) {
     background-image: $image;
     background-color: $fallback-colour;
