--- a/scss/utility/_index.scss
+++ b/scss/utility/_index.scss
@@ -15,4 +15,4 @@
 @forward "rounded-corners";
 @forward "short-horizontal-line";
 @forward "tooltip";
-@forward "wrapped-flex";
+@forward "flex-wrapped";
