--- a/scss/layout/_clients.scss
+++ b/scss/layout/_clients.scss
@@ -12,7 +12,6 @@
 
     .badge {
         @include utility.colour-on-hover;
-
         padding: 0 theme.$badge-horizontal-padding;
 
         // set badge position relative so it becomes the anchor for .tooltip
@@ -25,30 +24,11 @@
             $offset-above-parent: utility.px-to-rem(75px),
             $pointer-colour: theme.$primary,
         );
-
-        // put tooltip in front of default layer so the
-        // horizontal shadow doesn't affect it
-        z-index: 1;
     }
 
+    // when hovering on badge, show the tooltip
     .badge:hover .tooltip-wrapper {
         @include utility.tooltip-wrapper-show;
-    }
-
-    h3 {
-        font-size: theme.$tooltip-header-font-size;
-        font-weight: 400;
-        margin: 0.4rem 0 0;
-        padding: 0;
-    }
-    p {
-        font-size: theme.$tooltip-font-size;
-        line-height: theme.$tooltip-line-height;
-    }
-
-    // generate a small horizontal line after the h3 element in the tooltip
-    h3::after {
-        @include utility.short-horizontal-line($line-colour: theme.$primary-contrast);
     }
 
     .tooltip-content {
@@ -61,5 +41,22 @@
         text-align: center;
         color: theme.$primary-contrast;
         background-color: theme.$primary;
+    }
+
+    h3 {
+        font-size: theme.$tooltip-header-font-size;
+        font-weight: 400;
+        margin: 0.4rem 0 0;
+        padding: 0;
+        
+        // generate a small horizontal line after the h3 element in the tooltip
+        ::after {
+            @include utility.short-horizontal-line($line-colour: theme.$primary-contrast);
+        }
+    }
+
+    p {
+        font-size: theme.$tooltip-font-size;
+        line-height: theme.$tooltip-line-height;
     }
 }
