--- a/scss/utility/_margin-center.scss
+++ b/scss/utility/_margin-center.scss
@@ -1,3 +1,6 @@
+// A pair of mixins to attempt to center an element within its 
+// parent element by setting margin properties.
+
 @mixin margin-x-center {
     margin-left: auto;
     margin-right: auto;
