--- a/scss/layout/_nav-bar.scss
+++ b/scss/layout/_nav-bar.scss
@@ -94,7 +94,9 @@ nav {
     .subcategories {
         @include utility.flex-row-container;
         @include utility.margin-x-center;
-        @include theme.content-width-by-breakpoint;
+        @include theme.content-width-by-breakpoint(
+            $width-add: utility.px-to-rem(-30px)
+        );
         
         justify-content: start;
         height: $subcategory-height;
