--- a/scss/utility/_index.scss
+++ b/scss/utility/_index.scss
@@ -9,7 +9,7 @@
 @forward "grid";
 @forward "hero-image-background";
 @forward "hide-section-heading";
-@forward "horizontal-shadow-after";
+@forward "horizontal-shadow";
 @forward "margin-center";
 @forward "primary-box-shadow";
 @forward "rounded-corners";
